--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.spring.jpa.hibernate.*=error
 #logging.level.org.springframework.boot.autoconfigure.h2=INFO
 #logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 #spring.h2.console.enabled=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/YouBooking
+spring.datasource.url=jdbc:postgresql://database:5432/YouBooking
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.username=root
